--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,10 @@ plugins:
 paginate: 5
 paginate_path: "/blog/page:num/"
 
-# Theme specific settings
+# Permalink configuration
+permalink: /blog/:year/:month/:day/:title/
+
+# Theme settings
 # Your page's title
 name: "My Page"
 # IP infomation(such as copy-right notice)
